# redactor

./: .env  .gitignore  Cargo.toml  Makefile  README.md  flake.nix  llm_options.json  ner_options.json  stream.txt
presentation/: slides.html  slides.md
scripts/: get_redact_options.sh  redact.sh  run-docker.sh
src/: main.rs
src/common/: config.rs
src/core/: ai.rs  mod.rs  tests.rs  types.rs
src/core/huggingface_hub/: types.rs  utils.rs
src/utils/: web.rs
src/web/: server.rs  types.rs
src/web/api/: routes.rs
